--- a/extension-manifest-v3/src/_locales/de/messages.json
+++ b/extension-manifest-v3/src/_locales/de/messages.json
@@ -2,11 +2,13 @@
   "@_0__left": {
     "message": "$${0} verbleibend"
   },
-  "@_0__will_be_trusted_on_this_website_": {
-    "message": "$${0} will be trusted on this website."
+  "@_0__will_be_blocked_on_this_website_": {
+    "message": "$${0} wird auf dieser Website blockiert.",
+    "description": "A tracker will be trusted on this website."
   },
-  "@_1__will_be_blocked_on_this_website_": {
-    "message": "$${1} will be blocked on this website."
+  "@_0__will_be_trusted_on_this_website_": {
+    "message": "$${0} wird auf dieser Website vertraut.",
+    "description": "A tracker will be trusted on this website."
   },
   "1_day": {
     "message": "1 Tag"
@@ -24,16 +26,17 @@
     "message": "Werbeblocker"
   },
   "add": {
-    "message": "Add"
+    "message": "Hinzufügen"
   },
   "add_@_0__as_exception": {
-    "message": "Add $${0} as exception"
+    "message": "$${0} als Ausnahme hinzufügen",
+    "description": "Add domain as exception"
   },
   "add_website_exception": {
-    "message": "Add website exception"
+    "message": "Website-Ausnahme hinzufügen"
   },
   "adjusted": {
-    "message": "adjusted"
+    "message": "angepasst"
   },
   "adult_advertising": {
     "message": "Erwachsenenwerbung",
@@ -72,28 +75,29 @@
     "message": "Werde Ghostery-Förderer"
   },
   "block_all__recommend_": {
-    "message": "Block all (recommend)"
+    "message": "Alle blockieren (empfohlen)"
   },
   "block_on_this_website": {
-    "message": "Block on this website"
+    "message": "Auf dieser Website blockieren"
   },
   "blocked": {
-    "message": "Blocked"
+    "message": "Blockiert"
   },
   "blocked__@_0_": {
-    "message": "Blocked: $${0}"
+    "message": "Blockiert: $${0}",
+    "description": "A number of blocked trackers, eg: 'Blocked: 2'"
   },
   "blocked_on_all_websites": {
-    "message": "Blocked on all websites"
+    "message": "Auf allen Websites blockiert"
   },
   "blocked_on_this_website": {
-    "message": "Blocked on this website"
+    "message": "Auf dieser Website blockiert"
   },
   "cancel": {
     "message": "Abbrechen"
   },
   "category": {
-    "message": "Category"
+    "message": "Kategorie"
   },
   "cdn": {
     "message": "CDN",
@@ -106,7 +110,7 @@
     "message": "Klicken Sie auf das Puzzle-Symbol neben der Suchleiste, um Ghostery an die Werkzeugleiste anzuheften."
   },
   "collapse": {
-    "message": "Collapse"
+    "message": "Weniger anzeigen"
   },
   "comments": {
     "message": "Kommentare",
@@ -122,6 +126,9 @@
   "contact_support": {
     "message": "Kontakt zum Support"
   },
+  "contribute_to_ghostery_tracker_database_on_github": {
+    "message": "Zur Ghostery Tracker-Datenbank auf Github beitragen"
+  },
   "contributor": {
     "message": "Unterstützer"
   },
@@ -129,13 +136,14 @@
     "message": "In die Zwischenablage kopiert"
   },
   "country": {
-    "message": "Country"
+    "message": "Land"
   },
   "create_account": {
     "message": "Konto erstellen"
   },
   "current_protection_status_for_@_0__": {
-    "message": "Current protection status for $${0}:"
+    "message": "Aktueller Schutzstatus für $${0}:",
+    "description": "Current protection status for a tracker"
   },
   "customer_interaction": {
     "message": "Kundeninteraktion",
@@ -204,7 +212,7 @@
     "description": "Tracker category name"
   },
   "expand": {
-    "message": "Expand"
+    "message": "Mehr anzeigen"
   },
   "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
     "message": "Erweitern Sie den Ghostery-Werbeblocker in wenigen einfachen Schritten auf Suchmaschinen."
@@ -214,7 +222,7 @@
     "description": "Tracker category name"
   },
   "for_all_websites": {
-    "message": "For all websites"
+    "message": "Für alle Websites"
   },
   "for_more_information_read_our_full": {
     "message": "Für weitere Informationen lesen Sie bitte unsere vollständigen"
@@ -326,7 +334,7 @@
     "message": "Erfahre mehr über die Herausforderungen von YouTube gegenüber Werbeblockern"
   },
   "load_more": {
-    "message": "Load more"
+    "message": "Mehr laden"
   },
   "manifest_name": {
     "message": "Ghostery Tracker- & Werbeblocker | Datenschutz AdBlocker"
@@ -345,13 +353,13 @@
     "description": "Tracker category name"
   },
   "modify_the_recommended_blocking_settings_for_every_website_": {
-    "message": "Modify the recommended blocking settings for every website."
+    "message": "Ändern Sie die empfohlenen Blockierungseinstellungen für jede Website."
   },
   "more_ad_blocking_available": {
     "message": "Weitere Werbeblocker verfügbar"
   },
   "more_in_this_organization": {
-    "message": "More in this organization"
+    "message": "Mehr in dieser Organisation"
   },
   "my_account": {
     "message": "Mein Konto"
@@ -363,10 +371,10 @@
     "message": "Never-Consent"
   },
   "no_activities_detected": {
-    "message": "No activities detected"
+    "message": "Keine Aktivitäten erkannt"
   },
   "no_websites_exceptions_added_yet": {
-    "message": "No websites exceptions added yet"
+    "message": "Noch keine Website-Ausnahmen hinzugefügt"
   },
   "number_of_trackers_with_blocked_network_requests_": {
     "message": "Anzahl der Tracker mit blockierten Netzwerkanfragen."
@@ -375,7 +383,7 @@
     "message": "Anzahl der Tracker mit entfernten Cookies oder Fingerabdrücken."
   },
   "observed_activities": {
-    "message": "Observed activities"
+    "message": "Beobachtete Aktivitäten"
   },
   "off": {
     "message": "Aus"
@@ -390,20 +398,17 @@
     "message": "YouTube in einem privaten Fenster öffnen"
   },
   "organization": {
-    "message": "Organization"
+    "message": "Organisation"
   },
   "organization_s_website": {
-    "message": "Organization's website"
+    "message": "Website der Organisation"
   },
   "other": {
     "message": "Sonstiges",
     "description": "Tracker category name"
   },
-  "our_recommendation_for_this_activity__blocked": {
-    "message": "Our recommendation for this activity: Blocked"
-  },
-  "our_recommendation_for_this_activity__trusted": {
-    "message": "Our recommendation for this activity: Trusted"
+  "our_recommendation_for_this_activity": {
+    "message": "Unsere Empfehlung für diese Aktivität"
   },
   "pause_on_this_site": {
     "message": "Auf dieser Seite pausieren"
@@ -436,7 +441,7 @@
     "message": "Datenschutz"
   },
   "protection_status": {
-    "message": "Protection status"
+    "message": "Schutzstatus"
   },
   "read_more_on_whotracks_me": {
     "message": "Lesen Sie mehr auf WhoTracks.Me"
@@ -457,7 +462,7 @@
     "message": "Fortsetzen"
   },
   "save": {
-    "message": "Save"
+    "message": "Speichern"
   },
   "save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
     "message": "Speichern und synchronisieren Sie Ihre benutzerdefinierten Einstellungen auf verschiedenen Browsern und Geräten."
@@ -469,7 +474,7 @@
     "message": "Website durchsuchen ..."
   },
   "set_blocking_preference": {
-    "message": "Set blocking preference"
+    "message": "Blockierungspräferenzen festlegen"
   },
   "settings": {
     "message": "Einstellungen"
@@ -481,7 +486,7 @@
     "message": "Einrichtung erfolgreich"
   },
   "show_all": {
-    "message": "Show all"
+    "message": "Alle anzeigen"
   },
   "shows_the_tracker_preview_beside_search_results_": {
     "message": "Zeigt die Tracker-Vorschau neben den Suchergebnissen."
@@ -514,13 +519,13 @@
     "message": "Konditionen"
   },
   "thank_you_for_your_support_in_ghostery_s_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
-    "message": "Thank you for your support in Ghostery's fight for a web where privacy is a basic human right!"
+    "message": "Vielen Dank für Ihre Unterstützung im Kampf von Ghostery für ein Internet, in dem Datenschutz ein grundlegendes Menschenrecht ist!"
   },
   "tracker_database": {
-    "message": "Tracker database"
+    "message": "Tracker Datenbank"
   },
   "trackers": {
-    "message": "Trackers"
+    "message": "Tracker"
   },
   "trackers_blocked": {
     "message": "Blockierte Tracker"
@@ -540,20 +545,24 @@
   "trackers_wheel": {
     "message": "Tracker-Rad"
   },
+  "trust_all__recommend_": {
+    "message": "Trust all (recommend)"
+  },
   "trust_on_this_website": {
-    "message": "Trust on this website"
+    "message": "Auf dieser Website vertrauen"
   },
   "trusted": {
-    "message": "Trusted"
+    "message": "Vertrauenswürdig"
   },
   "trusted__@_0_": {
-    "message": "Trusted: $${0}"
+    "message": "Vertraut: $${0}",
+    "description": "A number of trusted trackers eg: 'Trusted: 2'"
   },
   "trusted_on_all_websites": {
-    "message": "Trusted on all websites"
+    "message": "Auf allen Websites vertraut"
   },
   "trusted_on_this_website": {
-    "message": "Trusted on this website"
+    "message": "Auf dieser Website vertraut"
   },
   "unidentified": {
     "message": "Nicht identifiziert",
@@ -569,10 +578,7 @@
     "message": "Beobachtete URLs"
   },
   "view_activity_details": {
-    "message": "View activity details"
-  },
-  "view_trackerdb_on_github": {
-    "message": "View trackerdb on GitHub"
+    "message": "Details zur Aktivität anzeigen"
   },
   "visit_our_blog": {
     "message": "Besuche unseren Blog"
@@ -587,7 +593,7 @@
     "message": "Website"
   },
   "website_exceptions": {
-    "message": "Website exceptions"
+    "message": "Website-Ausnahmen"
   },
   "websites": {
     "message": "Websites"
@@ -614,7 +620,7 @@
     "message": "Ohne aktivierte Datenschutzfunktionen steht nur die Grundfunktion zur Benennung von Trackern zur Verfügung."
   },
   "you_are_awesome_": {
-    "message": "You are awesome!"
+    "message": "Sie sind toll!"
   },
   "you_are_signed_in_as_": {
     "message": "Sie sind angemeldet als:"
