--- a/extension-manifest-v3/src/_locales/es/messages.json
+++ b/extension-manifest-v3/src/_locales/es/messages.json
@@ -2,11 +2,13 @@
   "@_0__left": {
     "message": "queda $${0}"
   },
-  "@_0__will_be_trusted_on_this_website_": {
-    "message": "$${0} will be trusted on this website."
+  "@_0__will_be_blocked_on_this_website_": {
+    "message": "Se bloqueará el rastreador $${0} en este sitio web.",
+    "description": "A tracker will be trusted on this website."
   },
-  "@_1__will_be_blocked_on_this_website_": {
-    "message": "$${1} will be blocked on this website."
+  "@_0__will_be_trusted_on_this_website_": {
+    "message": "Se considerará de confianza el rastreador $${0} en este sitio web.",
+    "description": "A tracker will be trusted on this website."
   },
   "1_day": {
     "message": "1 día"
@@ -24,16 +26,17 @@
     "message": "Bloqueador de anuncios"
   },
   "add": {
-    "message": "Add"
+    "message": "Añadir"
   },
   "add_@_0__as_exception": {
-    "message": "Add $${0} as exception"
+    "message": "Añadir $${0} a modo excepción",
+    "description": "Add domain as exception"
   },
   "add_website_exception": {
-    "message": "Add website exception"
+    "message": "Añadir excepción de sitio web"
   },
   "adjusted": {
-    "message": "adjusted"
+    "message": "ajustado"
   },
   "adult_advertising": {
     "message": "Publicidad para adultos",
@@ -72,28 +75,29 @@
     "message": "Conviértete en Contribuyente"
   },
   "block_all__recommend_": {
-    "message": "Block all (recommend)"
+    "message": "Bloquear todo (recomendado)"
   },
   "block_on_this_website": {
-    "message": "Block on this website"
+    "message": "Bloquear en este sitio web"
   },
   "blocked": {
-    "message": "Blocked"
+    "message": "Bloqueado"
   },
   "blocked__@_0_": {
-    "message": "Blocked: $${0}"
+    "message": "Bloqueados: $${0}",
+    "description": "A number of blocked trackers, eg: 'Blocked: 2'"
   },
   "blocked_on_all_websites": {
-    "message": "Blocked on all websites"
+    "message": "Bloqueado en todos los sitios web"
   },
   "blocked_on_this_website": {
-    "message": "Blocked on this website"
+    "message": "Bloqueado en este sitio web"
   },
   "cancel": {
     "message": "Cancelar"
   },
   "category": {
-    "message": "Category"
+    "message": "Categoría"
   },
   "cdn": {
     "message": "CDN",
@@ -106,7 +110,7 @@
     "message": "Haz clic en el icono con forma de puzle que está junto a la barra de búsqueda y ancla Ghostery a la barra de herramientas."
   },
   "collapse": {
-    "message": "Collapse"
+    "message": "Contraer"
   },
   "comments": {
     "message": "Comentarios",
@@ -122,6 +126,9 @@
   "contact_support": {
     "message": "Contacta con asistencia"
   },
+  "contribute_to_ghostery_tracker_database_on_github": {
+    "message": "Colabora con la base de datos de rastreadores de Ghostery en Github"
+  },
   "contributor": {
     "message": "Colaborador"
   },
@@ -129,13 +136,14 @@
     "message": "Copiado al portapapeles"
   },
   "country": {
-    "message": "Country"
+    "message": "País"
   },
   "create_account": {
     "message": "Crear una cuenta"
   },
   "current_protection_status_for_@_0__": {
-    "message": "Current protection status for $${0}:"
+    "message": "Estado de protección actual de $${0}:",
+    "description": "Current protection status for a tracker"
   },
   "customer_interaction": {
     "message": "Interacción con el cliente",
@@ -204,7 +212,7 @@
     "description": "Tracker category name"
   },
   "expand": {
-    "message": "Expand"
+    "message": "Expandir"
   },
   "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
     "message": "Amplía el bloqueo de anuncios de Ghostery a los buscadores en unos sencillos pasos."
@@ -214,7 +222,7 @@
     "description": "Tracker category name"
   },
   "for_all_websites": {
-    "message": "For all websites"
+    "message": "Para todos los sitios web"
   },
   "for_more_information_read_our_full": {
     "message": "Para obtener más información, lee todos nuestros"
@@ -326,7 +334,7 @@
     "message": "Más información sobre los desafíos de YouTube a los bloqueadores de anuncios"
   },
   "load_more": {
-    "message": "Load more"
+    "message": "Cargar más"
   },
   "manifest_name": {
     "message": "Ghostery Rastreador & Bloqueador de anuncios - Privacidad AdBlock"
@@ -345,13 +353,13 @@
     "description": "Tracker category name"
   },
   "modify_the_recommended_blocking_settings_for_every_website_": {
-    "message": "Modify the recommended blocking settings for every website."
+    "message": "Modifica los ajustes de bloqueo recomendados de todos los sitios web."
   },
   "more_ad_blocking_available": {
     "message": "Más bloqueo de anuncios disponible"
   },
   "more_in_this_organization": {
-    "message": "More in this organization"
+    "message": "Más en esta organización"
   },
   "my_account": {
     "message": "Mi cuenta"
@@ -363,10 +371,10 @@
     "message": "Never-Consent"
   },
   "no_activities_detected": {
-    "message": "No activities detected"
+    "message": "No se detectaron actividades"
   },
   "no_websites_exceptions_added_yet": {
-    "message": "No websites exceptions added yet"
+    "message": "No se ha añadido aún ninguna excepción"
   },
   "number_of_trackers_with_blocked_network_requests_": {
     "message": "Número de rastreadores con solicitudes de red bloqueadas."
@@ -375,7 +383,7 @@
     "message": "Número de rastreadores con cookies o huellas dactilares eliminadas."
   },
   "observed_activities": {
-    "message": "Observed activities"
+    "message": "Actividades observadas"
   },
   "off": {
     "message": "No"
@@ -390,20 +398,17 @@
     "message": "Abrir YouTube en una ventana privada"
   },
   "organization": {
-    "message": "Organization"
+    "message": "Organización"
   },
   "organization_s_website": {
-    "message": "Organization's website"
+    "message": "Sitio web de la organización"
   },
   "other": {
     "message": "Otros",
     "description": "Tracker category name"
   },
-  "our_recommendation_for_this_activity__blocked": {
-    "message": "Our recommendation for this activity: Blocked"
-  },
-  "our_recommendation_for_this_activity__trusted": {
-    "message": "Our recommendation for this activity: Trusted"
+  "our_recommendation_for_this_activity": {
+    "message": "Lo que recomendamos para esta actividad"
   },
   "pause_on_this_site": {
     "message": "Pausa en este sitio"
@@ -436,7 +441,7 @@
     "message": "Protección de la privacidad"
   },
   "protection_status": {
-    "message": "Protection status"
+    "message": "Estado de protección"
   },
   "read_more_on_whotracks_me": {
     "message": "Leer más sobre WhoTracks.Me"
@@ -457,7 +462,7 @@
     "message": "Reactivar"
   },
   "save": {
-    "message": "Save"
+    "message": "Guardar"
   },
   "save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
     "message": "Guarda y sincroniza tus ajustes personalizados en todos tus navegadores y dispositivos."
@@ -469,7 +474,7 @@
     "message": "Buscar sitio web..."
   },
   "set_blocking_preference": {
-    "message": "Set blocking preference"
+    "message": "Establecer preferencia de bloqueo"
   },
   "settings": {
     "message": "Ajustes"
@@ -481,7 +486,7 @@
     "message": "La configuración ha terminado"
   },
   "show_all": {
-    "message": "Show all"
+    "message": "Mostrar todo"
   },
   "shows_the_tracker_preview_beside_search_results_": {
     "message": "Muestra la vista previa de rastreadores junto a los resultados de la búsqueda."
@@ -514,13 +519,13 @@
     "message": "Términos y condiciones"
   },
   "thank_you_for_your_support_in_ghostery_s_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
-    "message": "Thank you for your support in Ghostery's fight for a web where privacy is a basic human right!"
+    "message": "Gracias por tu apoyo a Ghostery en su afán por lograr que la privacidad sea un derecho humano básico en Internet."
   },
   "tracker_database": {
-    "message": "Tracker database"
+    "message": "Base de datos de rastreadores"
   },
   "trackers": {
-    "message": "Trackers"
+    "message": "Rastreadores"
   },
   "trackers_blocked": {
     "message": "Rastreadores bloqueados"
@@ -540,20 +545,24 @@
   "trackers_wheel": {
     "message": "Rueda de rastreadores"
   },
+  "trust_all__recommend_": {
+    "message": "Trust all (recommend)"
+  },
   "trust_on_this_website": {
-    "message": "Trust on this website"
+    "message": "Confiar en este sitio web"
   },
   "trusted": {
-    "message": "Trusted"
+    "message": "De confianza"
   },
   "trusted__@_0_": {
-    "message": "Trusted: $${0}"
+    "message": "De confianza: $${0}",
+    "description": "A number of trusted trackers eg: 'Trusted: 2'"
   },
   "trusted_on_all_websites": {
-    "message": "Trusted on all websites"
+    "message": "De confianza en todos los sitios web"
   },
   "trusted_on_this_website": {
-    "message": "Trusted on this website"
+    "message": "De confianza en este sitio web"
   },
   "unidentified": {
     "message": "Sin identificar",
@@ -569,10 +578,7 @@
     "message": "URL observadas"
   },
   "view_activity_details": {
-    "message": "View activity details"
-  },
-  "view_trackerdb_on_github": {
-    "message": "View trackerdb on GitHub"
+    "message": "Ver detalles de la actividad"
   },
   "visit_our_blog": {
     "message": "Visita nuestro blog"
@@ -587,7 +593,7 @@
     "message": "Sitio web"
   },
   "website_exceptions": {
-    "message": "Website exceptions"
+    "message": "Excepciones de sitios web"
   },
   "websites": {
     "message": "Sitios web"
@@ -614,7 +620,7 @@
     "message": "Sin las funciones de privacidad activadas, solo la funcionalidad básica de identificar rastreadores está disponible."
   },
   "you_are_awesome_": {
-    "message": "You are awesome!"
+    "message": "¡Eres genial!"
   },
   "you_are_signed_in_as_": {
     "message": "Iniciaste sesión como:"
