--- a/extension-manifest-v3/src/_locales/ko/messages.json
+++ b/extension-manifest-v3/src/_locales/ko/messages.json
@@ -2,11 +2,13 @@
   "@_0__left": {
     "message": "$${0} 남음"
   },
-  "@_0__will_be_trusted_on_this_website_": {
-    "message": "$${0} will be trusted on this website."
+  "@_0__will_be_blocked_on_this_website_": {
+    "message": "$${0}이(가) 이 웹사이트상에서 차단됩니다.",
+    "description": "A tracker will be trusted on this website."
   },
-  "@_1__will_be_blocked_on_this_website_": {
-    "message": "$${1} will be blocked on this website."
+  "@_0__will_be_trusted_on_this_website_": {
+    "message": "$${0}이(가) 이 웹사이트상에서 신뢰됩니다.",
+    "description": "A tracker will be trusted on this website."
   },
   "1_day": {
     "message": "1일"
@@ -24,16 +26,17 @@
     "message": "광고 차단"
   },
   "add": {
-    "message": "Add"
+    "message": "추가"
   },
   "add_@_0__as_exception": {
-    "message": "Add $${0} as exception"
+    "message": "예외로 $${0} 추가",
+    "description": "Add domain as exception"
   },
   "add_website_exception": {
-    "message": "Add website exception"
+    "message": "웹사이트 예외 추가"
   },
   "adjusted": {
-    "message": "adjusted"
+    "message": "조정됨"
   },
   "adult_advertising": {
     "message": "성인 광고 ",
@@ -72,28 +75,29 @@
     "message": "기부자가 되세요."
   },
   "block_all__recommend_": {
-    "message": "Block all (recommend)"
+    "message": "모두 차단(권장)"
   },
   "block_on_this_website": {
-    "message": "Block on this website"
+    "message": "이 웹사이트상에서 차단"
   },
   "blocked": {
-    "message": "Blocked"
+    "message": "차단됨 "
   },
   "blocked__@_0_": {
-    "message": "Blocked: $${0}"
+    "message": "차단됨: $${0}",
+    "description": "A number of blocked trackers, eg: 'Blocked: 2'"
   },
   "blocked_on_all_websites": {
-    "message": "Blocked on all websites"
+    "message": "모든 웹사이트상에서 차단됨"
   },
   "blocked_on_this_website": {
-    "message": "Blocked on this website"
+    "message": "이 웹사이트상에서 차단됨"
   },
   "cancel": {
     "message": "취소 "
   },
   "category": {
-    "message": "Category"
+    "message": "카테고리"
   },
   "cdn": {
     "message": "CDN",
@@ -106,7 +110,7 @@
     "message": "검색 바 옆 퍼즐 아이콘을 클릭하면 Ghostery가 툴바에 고정됩니다."
   },
   "collapse": {
-    "message": "Collapse"
+    "message": "접기"
   },
   "comments": {
     "message": "댓글",
@@ -122,6 +126,9 @@
   "contact_support": {
     "message": "연락 지원 "
   },
+  "contribute_to_ghostery_tracker_database_on_github": {
+    "message": "Github상의 Ghostery 트래커 데이터베이스에 기여"
+  },
   "contributor": {
     "message": "기부자"
   },
@@ -129,13 +136,14 @@
     "message": "클립보드에 복사됨"
   },
   "country": {
-    "message": "Country"
+    "message": "국가"
   },
   "create_account": {
     "message": "계정 만들기 "
   },
   "current_protection_status_for_@_0__": {
-    "message": "Current protection status for $${0}:"
+    "message": "현재 $${0} 보호 상태:",
+    "description": "Current protection status for a tracker"
   },
   "customer_interaction": {
     "message": "고객 응대 ",
@@ -204,7 +212,7 @@
     "description": "Tracker category name"
   },
   "expand": {
-    "message": "Expand"
+    "message": "펼치기"
   },
   "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
     "message": "간단히 몇 단계만 거치면 검색 엔진에까지 Ghostery 광고 차단을 확대 적용할 수 있습니다."
@@ -214,7 +222,7 @@
     "description": "Tracker category name"
   },
   "for_all_websites": {
-    "message": "For all websites"
+    "message": "모든 웹사이트 대상"
   },
   "for_more_information_read_our_full": {
     "message": "자세한 정보는 전문을 읽으시기 바랍니다"
@@ -326,7 +334,7 @@
     "message": "광고 차단기에 대한 YouTube의 도전에 대해 자세히 알아보기"
   },
   "load_more": {
-    "message": "Load more"
+    "message": "자세히 알아보기"
   },
   "manifest_name": {
     "message": "고스터리 트래커 및 광고 차단기 - 프라이버시 AdBlock"
@@ -345,13 +353,13 @@
     "description": "Tracker category name"
   },
   "modify_the_recommended_blocking_settings_for_every_website_": {
-    "message": "Modify the recommended blocking settings for every website."
+    "message": "모든 웹사이트에 대한 권장 차단 설정을 수정합니다."
   },
   "more_ad_blocking_available": {
     "message": "더 많은 광고 차단 가능"
   },
   "more_in_this_organization": {
-    "message": "More in this organization"
+    "message": "이 조직 내 더 보기"
   },
   "my_account": {
     "message": "내 계정 "
@@ -363,10 +371,10 @@
     "message": "동의하지 않음"
   },
   "no_activities_detected": {
-    "message": "No activities detected"
+    "message": "감지된 활동 없음"
   },
   "no_websites_exceptions_added_yet": {
-    "message": "No websites exceptions added yet"
+    "message": "아직 추가된 웹사이트 예외 없음"
   },
   "number_of_trackers_with_blocked_network_requests_": {
     "message": "네트워크 요청이 차단된 트래커의 수."
@@ -375,7 +383,7 @@
     "message": "쿠키 및 지문이 제거된 트래커의 수."
   },
   "observed_activities": {
-    "message": "Observed activities"
+    "message": "관찰된 활동"
   },
   "off": {
     "message": "끄기 "
@@ -390,20 +398,17 @@
     "message": "비공개 창에서 YouTube 열기"
   },
   "organization": {
-    "message": "Organization"
+    "message": "조직"
   },
   "organization_s_website": {
-    "message": "Organization's website"
+    "message": "조직의 웹사이트"
   },
   "other": {
     "message": "기타",
     "description": "Tracker category name"
   },
-  "our_recommendation_for_this_activity__blocked": {
-    "message": "Our recommendation for this activity: Blocked"
-  },
-  "our_recommendation_for_this_activity__trusted": {
-    "message": "Our recommendation for this activity: Trusted"
+  "our_recommendation_for_this_activity": {
+    "message": "이 활동에 대한 권장사항"
   },
   "pause_on_this_site": {
     "message": "이 사이트에서 일시 중지"
@@ -436,7 +441,7 @@
     "message": "개인정보 보호"
   },
   "protection_status": {
-    "message": "Protection status"
+    "message": "보호 상태"
   },
   "read_more_on_whotracks_me": {
     "message": "WhoTracks.Me 자세히 보기"
@@ -457,7 +462,7 @@
     "message": "다시 시작 "
   },
   "save": {
-    "message": "Save"
+    "message": "저장"
   },
   "save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
     "message": "맞춤 설정을 저장하여 여러 브라우저 및 장치 간에 동기화합니다."
@@ -469,7 +474,7 @@
     "message": "웹사이트 검색..."
   },
   "set_blocking_preference": {
-    "message": "Set blocking preference"
+    "message": "차단 맞춤 설정"
   },
   "settings": {
     "message": "설정 "
@@ -481,7 +486,7 @@
     "message": "셋업 성공"
   },
   "show_all": {
-    "message": "Show all"
+    "message": "모두 표시"
   },
   "shows_the_tracker_preview_beside_search_results_": {
     "message": "검색결과 옆에 트래커 미리보기를 표시합니다."
@@ -514,13 +519,13 @@
     "message": "사용 약관 "
   },
   "thank_you_for_your_support_in_ghostery_s_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
-    "message": "Thank you for your support in Ghostery's fight for a web where privacy is a basic human right!"
+    "message": "개인정보 보호가 기본 인권인 웹을 위해 Ghostery가 싸우는 데 지지를 보내주셔서 감사합니다!"
   },
   "tracker_database": {
-    "message": "Tracker database"
+    "message": "기 데이터베이스"
   },
   "trackers": {
-    "message": "Trackers"
+    "message": "트래커 "
   },
   "trackers_blocked": {
     "message": "차단된 트래커"
@@ -540,20 +545,24 @@
   "trackers_wheel": {
     "message": "트래커 휠"
   },
+  "trust_all__recommend_": {
+    "message": "Trust all (recommend)"
+  },
   "trust_on_this_website": {
-    "message": "Trust on this website"
+    "message": "이 웹사이트상에서 신뢰"
   },
   "trusted": {
-    "message": "Trusted"
+    "message": "신뢰할 수 있는 사이트"
   },
   "trusted__@_0_": {
-    "message": "Trusted: $${0}"
+    "message": "신뢰됨: $${0}",
+    "description": "A number of trusted trackers eg: 'Trusted: 2'"
   },
   "trusted_on_all_websites": {
-    "message": "Trusted on all websites"
+    "message": "모든 웹사이트상에서 신뢰됨"
   },
   "trusted_on_this_website": {
-    "message": "Trusted on this website"
+    "message": "이 웹사이트상에서 신뢰됨"
   },
   "unidentified": {
     "message": "알 수 없음",
@@ -569,10 +578,7 @@
     "message": "관찰된 URL"
   },
   "view_activity_details": {
-    "message": "View activity details"
-  },
-  "view_trackerdb_on_github": {
-    "message": "View trackerdb on GitHub"
+    "message": "활동 세부정보 보기"
   },
   "visit_our_blog": {
     "message": "블로그 방문하기"
@@ -587,7 +593,7 @@
     "message": "웹사이트"
   },
   "website_exceptions": {
-    "message": "Website exceptions"
+    "message": "웹사이트 예외"
   },
   "websites": {
     "message": "웹사이트"
@@ -614,7 +620,7 @@
     "message": "개인 정보 보호 기능이 활성화되지 않으면, 추적기의 기본 기능만 사용할 수 있습니다."
   },
   "you_are_awesome_": {
-    "message": "You are awesome!"
+    "message": "대단하십니다!"
   },
   "you_are_signed_in_as_": {
     "message": "로그인한 계정:"
