--- a/extension-manifest-v3/src/_locales/ru/messages.json
+++ b/extension-manifest-v3/src/_locales/ru/messages.json
@@ -2,11 +2,13 @@
   "@_0__left": {
     "message": "$${0} left"
   },
-  "@_0__will_be_trusted_on_this_website_": {
-    "message": "$${0} will be trusted on this website."
+  "@_0__will_be_blocked_on_this_website_": {
+    "message": "Трекер $${0} будет заблокирован на этом сайте.",
+    "description": "A tracker will be trusted on this website."
   },
-  "@_1__will_be_blocked_on_this_website_": {
-    "message": "$${1} will be blocked on this website."
+  "@_0__will_be_trusted_on_this_website_": {
+    "message": "Трекер $${0} будет разрешен на этом сайте.",
+    "description": "A tracker will be trusted on this website."
   },
   "1_day": {
     "message": "1 день"
@@ -24,16 +26,17 @@
     "message": "Блокировка рекламы"
   },
   "add": {
-    "message": "Add"
+    "message": "Добавить"
   },
   "add_@_0__as_exception": {
-    "message": "Add $${0} as exception"
+    "message": "Добавить $${0} в качестве исключения",
+    "description": "Add domain as exception"
   },
   "add_website_exception": {
-    "message": "Add website exception"
+    "message": "Добавить сайт в качестве исключения"
   },
   "adjusted": {
-    "message": "adjusted"
+    "message": "изменено"
   },
   "adult_advertising": {
     "message": "Реклама для взрослых",
@@ -72,28 +75,29 @@
     "message": "Стать участником"
   },
   "block_all__recommend_": {
-    "message": "Block all (recommend)"
+    "message": "Заблокировать все (рекомендуется)"
   },
   "block_on_this_website": {
-    "message": "Block on this website"
+    "message": "Заблокировать на этом сайте"
   },
   "blocked": {
-    "message": "Blocked"
+    "message": "Заблокированные"
   },
   "blocked__@_0_": {
-    "message": "Blocked: $${0}"
+    "message": "Заблокировано: $${0}",
+    "description": "A number of blocked trackers, eg: 'Blocked: 2'"
   },
   "blocked_on_all_websites": {
-    "message": "Blocked on all websites"
+    "message": "Заблокировано на всех сайтах"
   },
   "blocked_on_this_website": {
-    "message": "Blocked on this website"
+    "message": "Заблокировано на этом сайте"
   },
   "cancel": {
     "message": "Отмена"
   },
   "category": {
-    "message": "Category"
+    "message": "Категория"
   },
   "cdn": {
     "message": "СДД",
@@ -106,7 +110,7 @@
     "message": "Нажмите на значок «Расширения» справа от строки поиска и закрепите Ghostery на панели инструментов."
   },
   "collapse": {
-    "message": "Collapse"
+    "message": "Свернуть"
   },
   "comments": {
     "message": "Комментарии",
@@ -122,6 +126,9 @@
   "contact_support": {
     "message": "Контактная поддержка"
   },
+  "contribute_to_ghostery_tracker_database_on_github": {
+    "message": "Поддержать базу данных трекеров от Ghostery на Github"
+  },
   "contributor": {
     "message": "Участник"
   },
@@ -129,13 +136,14 @@
     "message": "Скопировано в буфер обмена"
   },
   "country": {
-    "message": "Country"
+    "message": "Страна"
   },
   "create_account": {
     "message": "Создать учетную запись"
   },
   "current_protection_status_for_@_0__": {
-    "message": "Current protection status for $${0}:"
+    "message": "Текущий статус $${0}: ",
+    "description": "Current protection status for a tracker"
   },
   "customer_interaction": {
     "message": "Взаимодействие с клиентами",
@@ -204,7 +212,7 @@
     "description": "Tracker category name"
   },
   "expand": {
-    "message": "Expand"
+    "message": "Развернуть"
   },
   "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
     "message": "Настройте блокировку рекламы от Ghostery для поисковых систем в несколько простых шагов."
@@ -214,7 +222,7 @@
     "description": "Tracker category name"
   },
   "for_all_websites": {
-    "message": "For all websites"
+    "message": "Для всех сайтов"
   },
   "for_more_information_read_our_full": {
     "message": "Для получения дополнительной информации прочтите"
@@ -326,7 +334,7 @@
     "message": "Узнай больше о том, как YouTube противостоит блокировщикам рекламы"
   },
   "load_more": {
-    "message": "Load more"
+    "message": "Показать еще"
   },
   "manifest_name": {
     "message": "Ghostery Трекер & Ad Blocker - приватный блокировщик рекламы"
@@ -345,13 +353,13 @@
     "description": "Tracker category name"
   },
   "modify_the_recommended_blocking_settings_for_every_website_": {
-    "message": "Modify the recommended blocking settings for every website."
+    "message": "Настраивайте рекомендуемые параметры блокировки для каждого сайта."
   },
   "more_ad_blocking_available": {
     "message": "Дополнительные настройки блокировки рекламы"
   },
   "more_in_this_organization": {
-    "message": "More in this organization"
+    "message": "Другие трекеры в организации"
   },
   "my_account": {
     "message": "Моя учетная запись"
@@ -363,10 +371,10 @@
     "message": "Never-Consent"
   },
   "no_activities_detected": {
-    "message": "No activities detected"
+    "message": "Действия не обнаружены"
   },
   "no_websites_exceptions_added_yet": {
-    "message": "No websites exceptions added yet"
+    "message": "Сайтов, добавленных в исключения, пока нет"
   },
   "number_of_trackers_with_blocked_network_requests_": {
     "message": "Количество трекеров с заблокированными сетевыми запросами."
@@ -375,7 +383,7 @@
     "message": "Количество трекеров с удаленными файлами cookie или цифровыми отпечатками устройств."
   },
   "observed_activities": {
-    "message": "Observed activities"
+    "message": "Отслеживаемые действия"
   },
   "off": {
     "message": "Выкл"
@@ -390,20 +398,17 @@
     "message": "Открой YouTube в закрытом окне"
   },
   "organization": {
-    "message": "Organization"
+    "message": "Организация"
   },
   "organization_s_website": {
-    "message": "Organization's website"
+    "message": "Сайт организации"
   },
   "other": {
     "message": "Другое",
     "description": "Tracker category name"
   },
-  "our_recommendation_for_this_activity__blocked": {
-    "message": "Our recommendation for this activity: Blocked"
-  },
-  "our_recommendation_for_this_activity__trusted": {
-    "message": "Our recommendation for this activity: Trusted"
+  "our_recommendation_for_this_activity": {
+    "message": "Рекомендации для этого действия"
   },
   "pause_on_this_site": {
     "message": "Пауза на этом сайте"
@@ -436,7 +441,7 @@
     "message": "Защита конфиденциальности"
   },
   "protection_status": {
-    "message": "Protection status"
+    "message": "Статус защиты"
   },
   "read_more_on_whotracks_me": {
     "message": "Читайте больше на WhoTracks.Me"
@@ -457,7 +462,7 @@
     "message": "Возобновить"
   },
   "save": {
-    "message": "Save"
+    "message": "Сохранить"
   },
   "save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
     "message": "Сохраняйте свои настройки и синхронизируйте их между браузерами и устройствами."
@@ -469,7 +474,7 @@
     "message": "Поиск сайта..."
   },
   "set_blocking_preference": {
-    "message": "Set blocking preference"
+    "message": "Настроить параметры блокировки"
   },
   "settings": {
     "message": "Настройки"
@@ -481,7 +486,7 @@
     "message": "Настройка завершена"
   },
   "show_all": {
-    "message": "Show all"
+    "message": "Показать все"
   },
   "shows_the_tracker_preview_beside_search_results_": {
     "message": "Показывает количество трекеров рядом с результатами поиска."
@@ -514,13 +519,13 @@
     "message": "Условия и положения"
   },
   "thank_you_for_your_support_in_ghostery_s_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
-    "message": "Thank you for your support in Ghostery's fight for a web where privacy is a basic human right!"
+    "message": "Благодарим за помощь Ghostery в борьбе за конфиденциальность как за основное право человека."
   },
   "tracker_database": {
-    "message": "Tracker database"
+    "message": "База данных трекера"
   },
   "trackers": {
-    "message": "Trackers"
+    "message": "Трекеры"
   },
   "trackers_blocked": {
     "message": "Заблокированные трекеры"
@@ -540,20 +545,24 @@
   "trackers_wheel": {
     "message": "Трекерская рулетка"
   },
+  "trust_all__recommend_": {
+    "message": "Trust all (recommend)"
+  },
   "trust_on_this_website": {
-    "message": "Trust on this website"
+    "message": "Разрешить на этом сайте"
   },
   "trusted": {
-    "message": "Trusted"
+    "message": "Доверенный"
   },
   "trusted__@_0_": {
-    "message": "Trusted: $${0}"
+    "message": "Разрешено: $${0}",
+    "description": "A number of trusted trackers eg: 'Trusted: 2'"
   },
   "trusted_on_all_websites": {
-    "message": "Trusted on all websites"
+    "message": "Разрешено на всех сайтах"
   },
   "trusted_on_this_website": {
-    "message": "Trusted on this website"
+    "message": "Разрешено на этом сайте"
   },
   "unidentified": {
     "message": "Неизвестно",
@@ -569,10 +578,7 @@
     "message": "Отслеживаемые URL-адреса"
   },
   "view_activity_details": {
-    "message": "View activity details"
-  },
-  "view_trackerdb_on_github": {
-    "message": "View trackerdb on GitHub"
+    "message": "Просмотреть подробности действия"
   },
   "visit_our_blog": {
     "message": "Посетите наш блог"
@@ -587,7 +593,7 @@
     "message": "Веб-сайт"
   },
   "website_exceptions": {
-    "message": "Website exceptions"
+    "message": "Сайты-исключения"
   },
   "websites": {
     "message": "Веб-сайты"
@@ -614,7 +620,7 @@
     "message": "Без включенных функций приватности доступен только базовый функционал именных трекеров."
   },
   "you_are_awesome_": {
-    "message": "You are awesome!"
+    "message": "Отлично!"
   },
   "you_are_signed_in_as_": {
     "message": "Вы вошли как:"
