--- a/extension-manifest-v3/src/_locales/zh_TW/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_TW/messages.json
@@ -2,11 +2,13 @@
   "@_0__left": {
     "message": "還剩 $${0}"
   },
-  "@_0__will_be_trusted_on_this_website_": {
-    "message": "$${0} will be trusted on this website."
+  "@_0__will_be_blocked_on_this_website_": {
+    "message": "$${0} 將被此網站封鎖。",
+    "description": "A tracker will be trusted on this website."
   },
-  "@_1__will_be_blocked_on_this_website_": {
-    "message": "$${1} will be blocked on this website."
+  "@_0__will_be_trusted_on_this_website_": {
+    "message": "$${0} 將受此網站信任。",
+    "description": "A tracker will be trusted on this website."
   },
   "1_day": {
     "message": "1 天"
@@ -24,16 +26,17 @@
     "message": "廣告封鎖"
   },
   "add": {
-    "message": "Add"
+    "message": "新增"
   },
   "add_@_0__as_exception": {
-    "message": "Add $${0} as exception"
+    "message": "新增 $${0} 為例外",
+    "description": "Add domain as exception"
   },
   "add_website_exception": {
-    "message": "Add website exception"
+    "message": "新增網站例外"
   },
   "adjusted": {
-    "message": "adjusted"
+    "message": "已調整"
   },
   "adult_advertising": {
     "message": "成人廣告",
@@ -72,28 +75,29 @@
     "message": "成為捐助者"
   },
   "block_all__recommend_": {
-    "message": "Block all (recommend)"
+    "message": "全部封鎖（推薦）"
   },
   "block_on_this_website": {
-    "message": "Block on this website"
+    "message": "在此網站封鎖"
   },
   "blocked": {
-    "message": "Blocked"
+    "message": "已封鎖"
   },
   "blocked__@_0_": {
-    "message": "Blocked: $${0}"
+    "message": "已封鎖：$${0}",
+    "description": "A number of blocked trackers, eg: 'Blocked: 2'"
   },
   "blocked_on_all_websites": {
-    "message": "Blocked on all websites"
+    "message": "在所有網站都被封鎖"
   },
   "blocked_on_this_website": {
-    "message": "Blocked on this website"
+    "message": "在這個網站被封鎖"
   },
   "cancel": {
     "message": "取消"
   },
   "category": {
-    "message": "Category"
+    "message": "類別"
   },
   "cdn": {
     "message": "CDN",
@@ -106,7 +110,7 @@
     "message": "點擊搜尋欄位旁邊的拼圖圖示，將 Ghostery 釘選至工具列。"
   },
   "collapse": {
-    "message": "Collapse"
+    "message": "折疊"
   },
   "comments": {
     "message": "評論",
@@ -122,6 +126,9 @@
   "contact_support": {
     "message": "聯絡支援"
   },
+  "contribute_to_ghostery_tracker_database_on_github": {
+    "message": "在 Github 上為 Ghostery Tracker Database 貢獻"
+  },
   "contributor": {
     "message": "貢獻者"
   },
@@ -129,13 +136,14 @@
     "message": "複製到剪貼簿"
   },
   "country": {
-    "message": "Country"
+    "message": "國家"
   },
   "create_account": {
     "message": "創建帳戶"
   },
   "current_protection_status_for_@_0__": {
-    "message": "Current protection status for $${0}:"
+    "message": "目前對 $${0} 的保護狀態：",
+    "description": "Current protection status for a tracker"
   },
   "customer_interaction": {
     "message": "客戶互動",
@@ -204,7 +212,7 @@
     "description": "Tracker category name"
   },
   "expand": {
-    "message": "Expand"
+    "message": "展開"
   },
   "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
     "message": "只需幾個簡單步驟，即可將 Ghostery 廣告攔截功能擴展到搜尋引擎。"
@@ -214,7 +222,7 @@
     "description": "Tracker category name"
   },
   "for_all_websites": {
-    "message": "For all websites"
+    "message": "對所有網站"
   },
   "for_more_information_read_our_full": {
     "message": "如欲了解更多訊息，請閱讀我們的全文"
@@ -326,7 +334,7 @@
     "message": "詳細了解 YouTube 對廣告攔截器的挑戰 不要再問了"
   },
   "load_more": {
-    "message": "Load more"
+    "message": "載入更多"
   },
   "manifest_name": {
     "message": "Ghostery 追蹤器和廣告攔截器 - 隱私 AdBlock"
@@ -345,13 +353,13 @@
     "description": "Tracker category name"
   },
   "modify_the_recommended_blocking_settings_for_every_website_": {
-    "message": "Modify the recommended blocking settings for every website."
+    "message": "為每個網站調整建議的封鎖設定。"
   },
   "more_ad_blocking_available": {
     "message": "更多可用的廣告攔截功能"
   },
   "more_in_this_organization": {
-    "message": "More in this organization"
+    "message": "有關此機構的更多內容"
   },
   "my_account": {
     "message": "我的帳號"
@@ -363,10 +371,10 @@
     "message": "Never-Consent"
   },
   "no_activities_detected": {
-    "message": "No activities detected"
+    "message": "未偵測到任何活動"
   },
   "no_websites_exceptions_added_yet": {
-    "message": "No websites exceptions added yet"
+    "message": "尚未新增網站例外"
   },
   "number_of_trackers_with_blocked_network_requests_": {
     "message": "網路請求被攔截的追蹤器數量。"
@@ -375,7 +383,7 @@
     "message": "已刪除 cookie 或指紋的追蹤器數量。"
   },
   "observed_activities": {
-    "message": "Observed activities"
+    "message": "已觀察的活動"
   },
   "off": {
     "message": "關閉"
@@ -390,20 +398,17 @@
     "message": "在私人視窗中開啟 YouTube"
   },
   "organization": {
-    "message": "Organization"
+    "message": "組織"
   },
   "organization_s_website": {
-    "message": "Organization's website"
+    "message": "機構的網站"
   },
   "other": {
     "message": "其他",
     "description": "Tracker category name"
   },
-  "our_recommendation_for_this_activity__blocked": {
-    "message": "Our recommendation for this activity: Blocked"
-  },
-  "our_recommendation_for_this_activity__trusted": {
-    "message": "Our recommendation for this activity: Trusted"
+  "our_recommendation_for_this_activity": {
+    "message": "我們對此活動的推薦"
   },
   "pause_on_this_site": {
     "message": "在此站點暫停"
@@ -436,7 +441,7 @@
     "message": "隱私權保護"
   },
   "protection_status": {
-    "message": "Protection status"
+    "message": "保護狀態"
   },
   "read_more_on_whotracks_me": {
     "message": "在 WhoTracks.Me 上繼續閱讀"
@@ -457,7 +462,7 @@
     "message": "恢復"
   },
   "save": {
-    "message": "Save"
+    "message": "儲存"
   },
   "save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
     "message": "儲存並在瀏覽器和裝置之間同步您的自訂設定。"
@@ -469,7 +474,7 @@
     "message": "搜尋網站......"
   },
   "set_blocking_preference": {
-    "message": "Set blocking preference"
+    "message": "設定封鎖偏好設定"
   },
   "settings": {
     "message": "設定"
@@ -481,7 +486,7 @@
     "message": "設定成功"
   },
   "show_all": {
-    "message": "Show all"
+    "message": "顯示全部"
   },
   "shows_the_tracker_preview_beside_search_results_": {
     "message": "在搜尋結果旁顯示追蹤器預覽。"
@@ -514,13 +519,13 @@
     "message": "條款及條件"
   },
   "thank_you_for_your_support_in_ghostery_s_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
-    "message": "Thank you for your support in Ghostery's fight for a web where privacy is a basic human right!"
+    "message": "感謝你支持 Ghostery 為建立以隱私為基本人權的網路而奮鬥。"
   },
   "tracker_database": {
-    "message": "Tracker database"
+    "message": "追蹤程式資料庫"
   },
   "trackers": {
-    "message": "Trackers"
+    "message": "網頁跟蹤器"
   },
   "trackers_blocked": {
     "message": "已攔截的追蹤器"
@@ -540,20 +545,24 @@
   "trackers_wheel": {
     "message": "追踪器輪盤"
   },
+  "trust_all__recommend_": {
+    "message": "Trust all (recommend)"
+  },
   "trust_on_this_website": {
-    "message": "Trust on this website"
+    "message": "信任此網站"
   },
   "trusted": {
-    "message": "Trusted"
+    "message": "已信任"
   },
   "trusted__@_0_": {
-    "message": "Trusted: $${0}"
+    "message": "受信任：$${0}",
+    "description": "A number of trusted trackers eg: 'Trusted: 2'"
   },
   "trusted_on_all_websites": {
-    "message": "Trusted on all websites"
+    "message": "受所有網站信任"
   },
   "trusted_on_this_website": {
-    "message": "Trusted on this website"
+    "message": "在這個網站受信任"
   },
   "unidentified": {
     "message": "不明",
@@ -569,10 +578,7 @@
     "message": "已觀察到的 URL"
   },
   "view_activity_details": {
-    "message": "View activity details"
-  },
-  "view_trackerdb_on_github": {
-    "message": "View trackerdb on GitHub"
+    "message": "查看活動詳情"
   },
   "visit_our_blog": {
     "message": "造訪我們的博客"
@@ -587,7 +593,7 @@
     "message": "網站"
   },
   "website_exceptions": {
-    "message": "Website exceptions"
+    "message": "網站例外"
   },
   "websites": {
     "message": "網站"
@@ -614,7 +620,7 @@
     "message": "啟用隱私功能後，僅提供命名追蹤器的基本功能。"
   },
   "you_are_awesome_": {
-    "message": "You are awesome!"
+    "message": "太棒啦！"
   },
   "you_are_signed_in_as_": {
     "message": "您登入為："
